version 11.2.1
date: dd/mm/202y
  * Implemented services and support for Custom Tree
  * Fixed bug in EcoPortal configuration for the OntoPortal connector ignoring the provided frontend base URL always
    using the default value (i.e., the address of the official installation of EcoPortal).
  * Removed unused property stPath in the configuration of the ShowVoc deployer
  * Fixed bug in the OntoPortal connector that may not always include the api key in the data dump URL
  * added the possibility to get also the non-direct instances of a given class

version 11.2
date: 27/09/2022
  * improved the OntoPortal connector to consider the frontend base URL and retrieve missing settings from /site_config
  * improved the OntoPortal deployer to identify violations of constraints on data structure and then try to propose fixes
  * added a Deployer targeting ShowVoc
  * added an exporter for a selected scheme
  * added support for HTTP resolution and Content negotiation
  * fixed a bug related to an exception about the use of abstract datasets erroneously raised in assisted search when
    selecting a local project
  * fixed a bug related to transaction management preventing the execution of assisted search on local projects
  * updated dependency on Sheet2RDF 5.0.3

version 11.1
date: 23/06/2022
  * updated the internal copy of the core vocabulary LexInfo 3 used in conjunction with OntoLex-Lemon
  * collected plain sense relationships as "related" senses instead of "terminologicallyRelated" senses in the LexicographerView
  * introduced the new access level "EXT" for universal project accessibility (if a user has access to the project, ACL table 
    does not need to be consulted even if the user access it from another consumer)
  * fixed several bugs related to the MDR
  * fixed a bug when showing Manchester Expressions in a project having a reasoner configured
  * fixed a bug in the Global Search when dealing with numbers, symbols and punctuation