@@ -1,11 +1,12 @@
 version 11.2.1
 date: dd/mm/202y
   * Implemented services and support for Custom Tree
+  * Removed unused property stPath in the configuration of the ShowVoc deployer
+  * Added possibility to get also the non-direct instances of a given class
+  * Added possibility to prevent write operation on project by setting it in read only mode
   * Fixed bug in EcoPortal configuration for the OntoPortal connector ignoring the provided frontend base URL always
     using the default value (i.e., the address of the official installation of EcoPortal).
-  * Removed unused property stPath in the configuration of the ShowVoc deployer
   * Fixed bug in the OntoPortal connector that may not always include the api key in the data dump URL
-  * added the possibility to get also the non-direct instances of a given class
 
 version 11.2
 date: 27/09/2022
